{
  "sourceLanguage" : "en",
  "strings" : {
    "APOD" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "APOD"
          }
        }
      }
    },
    "Camera: %@" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Camera"
          }
        }
      }
    },
    "Date: %@" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Data"
          }
        }
      }
    },
    "Details" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Detalhes"
          }
        }
      }
    },
    "Earth" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Terra"
          }
        }
      }
    },
    "Earth Image" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Imagem da Terra"
          }
        }
      }
    },
    "Earth View" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vista da Terra"
          }
        }
      }
    },
    "Epic" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Epic"
          }
        }
      }
    },
    "Favorites" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favoritos"
          }
        }
      }
    },
    "Hello, world!" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Olá Mundo"
          }
        }
      }
    },
    "Home" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inicio"
          }
        }
      }
    },
    "Mars" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Marte"
          }
        }
      }
    },
    "Mars Photo" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Foto de Marte"
          }
        }
      }
    },
    "Mars Rover" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Explorador de Marte"
          }
        }
      }
    },
    "NASA Search" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pesquisa da NASA"
          }
        }
      }
    },
    "No favorites yet!" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ainda nao há favoritos!"
          }
        }
      }
    },
    "No photos found for this date." : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Não foram encontradas fotos para esta data."
          }
        }
      }
    },
    "No results found." : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sem resultados"
          }
        }
      }
    },
    "Picture of the day" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Foto do dia"
          }
        }
      }
    },
    "Rover: %@" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Explorador"
          }
        }
      }
    },
    "Search" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pesquisa"
          }
        }
      }
    },
    "Search Images" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pesquisa de imagens"
          }
        }
      }
    },
    "Search NASA images..." : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pesquisar imagens da NASA"
          }
        }
      }
    },
    "Select Earth Date" : {
      "localizations" : {
        "pt-PT" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Selecione data de pesquisa"
          }
        }
      }
    }
  },
  "version" : "1.0"
}